--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
   <link rel="stylesheet" href="resources/css/bootstrap.min.3.3.5.css">
-  <script src="resources/js/jquery.min.1.11.3.js"></script>
+  <script src="resources/js/jquery.min.js"></script>
   <script src="resources/js/bootstrap.min.3.3.5.js"></script>
     <base href="/">
 </head>
